--- a/.classpath
+++ b/.classpath
@@ -778,7 +778,91 @@
       <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.codehaus.jettison/jettison/docs/jettison-1.1-javadoc.jar!/"/>
     </attributes>
   </classpathentry>
-  <classpathentry kind="lib" path="/home/cloudera/.ivy2/cache/org.apache.spark/spark-streaming_2.11/jars/spark-streaming_2.11-2.2.0.jar"/>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.apache.spark/spark-mllib_2.11/srcs/spark-mllib_2.11-2.2.0-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.apache.spark/spark-mllib_2.11/jars/spark-mllib_2.11-2.2.0.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.apache.spark/spark-mllib_2.11/docs/spark-mllib_2.11-2.2.0-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.apache.spark/spark-streaming_2.11/srcs/spark-streaming_2.11-2.2.0-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.apache.spark/spark-streaming_2.11/jars/spark-streaming_2.11-2.2.0.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.apache.spark/spark-streaming_2.11/docs/spark-streaming_2.11-2.2.0-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.apache.spark/spark-graphx_2.11/srcs/spark-graphx_2.11-2.2.0-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.apache.spark/spark-graphx_2.11/jars/spark-graphx_2.11-2.2.0.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.apache.spark/spark-graphx_2.11/docs/spark-graphx_2.11-2.2.0-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.apache.spark/spark-mllib-local_2.11/srcs/spark-mllib-local_2.11-2.2.0-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.apache.spark/spark-mllib-local_2.11/jars/spark-mllib-local_2.11-2.2.0.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.apache.spark/spark-mllib-local_2.11/docs/spark-mllib-local_2.11-2.2.0-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.scalanlp/breeze_2.11/srcs/breeze_2.11-0.13.1-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.scalanlp/breeze_2.11/jars/breeze_2.11-0.13.1.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.scalanlp/breeze_2.11/docs/breeze_2.11-0.13.1-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.scalanlp/breeze-macros_2.11/srcs/breeze-macros_2.11-0.13.1-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.scalanlp/breeze-macros_2.11/jars/breeze-macros_2.11-0.13.1.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.scalanlp/breeze-macros_2.11/docs/breeze-macros_2.11-0.13.1-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/com.github.fommil.netlib/core/srcs/core-1.1.2-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/com.github.fommil.netlib/core/jars/core-1.1.2.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/com.github.fommil.netlib/core/docs/core-1.1.2-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="lib" path="/home/cloudera/.ivy2/cache/net.sourceforge.f2j/arpack_combined_all/jars/arpack_combined_all-0.1.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/net.sourceforge.f2j/arpack_combined_all/docs/arpack_combined_all-0.1-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/net.sf.opencsv/opencsv/srcs/opencsv-2.3-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/net.sf.opencsv/opencsv/jars/opencsv-2.3.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/net.sf.opencsv/opencsv/docs/opencsv-2.3-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/com.github.rwl/jtransforms/srcs/jtransforms-2.4.0-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/com.github.rwl/jtransforms/jars/jtransforms-2.4.0.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/com.github.rwl/jtransforms/docs/jtransforms-2.4.0-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.spire-math/spire_2.11/srcs/spire_2.11-0.13.0-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.spire-math/spire_2.11/jars/spire_2.11-0.13.0.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.spire-math/spire_2.11/docs/spire_2.11-0.13.0-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.spire-math/spire-macros_2.11/srcs/spire-macros_2.11-0.13.0-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.spire-math/spire-macros_2.11/jars/spire-macros_2.11-0.13.0.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.spire-math/spire-macros_2.11/docs/spire-macros_2.11-0.13.0-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.typelevel/machinist_2.11/srcs/machinist_2.11-0.6.1-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.typelevel/machinist_2.11/jars/machinist_2.11-0.6.1.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.typelevel/machinist_2.11/docs/machinist_2.11-0.6.1-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/com.chuusai/shapeless_2.11/srcs/shapeless_2.11-2.3.2-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/com.chuusai/shapeless_2.11/bundles/shapeless_2.11-2.3.2.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/com.chuusai/shapeless_2.11/docs/shapeless_2.11-2.3.2-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.typelevel/macro-compat_2.11/srcs/macro-compat_2.11-1.1.1-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.typelevel/macro-compat_2.11/jars/macro-compat_2.11-1.1.1.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.typelevel/macro-compat_2.11/docs/macro-compat_2.11-1.1.1-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.jpmml/pmml-model/srcs/pmml-model-1.2.15-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.jpmml/pmml-model/jars/pmml-model-1.2.15.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.jpmml/pmml-model/docs/pmml-model-1.2.15-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.jpmml/pmml-schema/srcs/pmml-schema-1.2.15-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.jpmml/pmml-schema/jars/pmml-schema-1.2.15.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.jpmml/pmml-schema/docs/pmml-schema-1.2.15-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
   <classpathentry kind="output" path="bin"/>
 </classpath>
